@@ -94,7 +94,9 @@ ENVIRONMENT VARIABLES
 ---------------------
 
 In addition to environment variables used by git (e.g. GIT_DIR), tig defines
-the following:
+the ones below. The command related environment variables have access to the
+internal state of tig via replacement variabls, such as `%(commit)` and
+`%(blob)`. See manpage:tigrc[5] for a full list.
 
 TIGRC_USER::
 	Path of the user configuration file (defaults to `~/.tigrc`).
